exports[`<UserMenu /> opens and closes when clicked 1`] = `
<li
  className="dzjnOV"
  onClick={[Function]}>
  <img
    className="guSIJB"
    src={undefined} />
  <span
    className="dzIkgv" />
  <ul
    className="edtLSL"
    open={false}>
    <li
      className="fpRjhm">
      <img
        className="drgPqv"
        src={undefined} />
      <p
        className="fVcwYn" />
    </li>
    <li
      className="encofi" />
  </ul>
</li>
`;

exports[`<UserMenu /> opens and closes when clicked 2`] = `
<li
  className="dzjnOV"
  onClick={[Function]}>
  <img
    className="guSIJB"
    src={undefined} />
  <span
    className="dzIkgv" />
  <ul
    className="iDtJkf"
    open={true}>
    <li
      className="fpRjhm">
      <img
        className="drgPqv"
        src={undefined} />
      <p
        className="fVcwYn" />
    </li>
    <li
      className="encofi" />
  </ul>
</li>
`;

exports[`<UserMenu /> renders correctly with default options 1`] = `
<li
  className="dzjnOV"
  onClick={[Function]}>
  <img
    className="guSIJB"
    src={undefined} />
  <span
    className="dzIkgv" />
  <ul
    className="edtLSL"
    open={false}>
    <li
      className="fpRjhm">
      <img
        className="drgPqv"
        src={undefined} />
      <p
        className="fVcwYn" />
    </li>
    <li
      className="encofi" />
  </ul>
</li>
`;

exports[`<UserMenu /> renders correctly with image 1`] = `
<li
  className="dzjnOV"
  onClick={[Function]}>
  <img
    className="guSIJB"
    src="/some/path" />
  <span
    className="dzIkgv" />
  <ul
    className="edtLSL"
    open={false}>
    <li
      className="fpRjhm">
      <img
        className="drgPqv"
        src="/some/path" />
      <p
        className="fVcwYn" />
    </li>
    <li
      className="encofi" />
  </ul>
</li>
`;

exports[`<UserMenu /> renders correctly with name 1`] = `
<li
  className="dzjnOV"
  onClick={[Function]}>
  <img
    className="guSIJB"
    src={undefined} />
  <span
    className="dzIkgv">
    Another name
  </span>
  <ul
    className="edtLSL"
    open={false}>
    <li
      className="fpRjhm">
      <img
        className="drgPqv"
        src={undefined} />
      <p
        className="fVcwYn">
        Another name
      </p>
    </li>
    <li
      className="encofi" />
  </ul>
</li>
`;

exports[`<UserMenu /> renders correctly with theme 1`] = `
<li
  className="gDCOpn"
  onClick={[Function]}>
  <img
    className="guSIJB"
    src={undefined} />
  <span
    className="dzIkgv" />
  <ul
    className="edtLSL"
    open={false}>
    <li
      className="fuYsiq">
      <img
        className="drgPqv"
        src={undefined} />
      <p
        className="fVcwYn" />
    </li>
    <li
      className="encofi" />
  </ul>
</li>
`;
